--- a/public/css/application.css
+++ b/public/css/application.css
@@ -4,3 +4,11 @@
 .no-padding{
 	padding: 0;
 }
+.controls {
+	position: relative;
+}
+.ui-datepicker-trigger{
+	position: absolute;
+	bottom: 8px;
+	margin-left: -20px;
+}
